[project]
name = "viesco"
version = "0.1.0"
description = "An utility for configuring VSCodium before first run."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-2.0-only"
authors = [
    { name = "Vladislav Gorokhov", email = "renesnoah@cryptolab.org" }
]
keywords = ["vscode", "vscodium", "patch", "patcher", "script", "automatic", "privacy", "telemetry", "config", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Text Editors",
    "Topic :: Utilities"
]
dependencies = []

[project.urls]
# Documentation = ""
Repository = "https://codeberg.org/renesnoah/viesco"
GitHub = "https://github.com/noahrenes/viesco"
"Source Code (Codeberg)" = "https://codeberg.org/renesnoah/viesco"
Issues = "https://codeberg.org/renesnoah/viesco/issues"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
